# vbsp-to-gltf

./: .gitignore  Cargo.toml  README.md  assets.nix  flake.nix  overlay.nix  package.nix  viewer.nix
.github/workflows/: ci.yml  release.yml
nix/: overlay.nix  package.nix  viewer.nix
src/: bsp.rs  cli.rs  convert.rs  error.rs  gltf_builder.rs  lib.rs  main.rs  materials.rs  prop.rs
src/server/: index.html  pack.rs  server.rs  viewer.js
src/server/viewer/: index.html  package-lock.json  package.json
src/server/viewer/src/: main.ts  style.css
src/server/viewer/transcoders/: README.md
