[package]
name = "vbsp-to-gltf"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
miette = { version = "5.5.0", features = ["fancy"] }
vbsp = "0.4.1"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.3.0"
vtf = "0.1.6"
vmt-parser = "0.1"
image = "0.23.14"
tf-asset-loader = { version = "0.1", features = ["zip"] }
vmdl = "0.1"
clap = { version = "4.0.29", features = ["derive"] }
gltf-json = "=1.3.0"
gltf = "=1.3.0"
cgmath = "0.18.0"
bytemuck = { version = "1.14.0", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 2