[package]
name = "vbsp-to-gltf"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "vbsp_to_gltf"
path = "src/lib.rs"

[[bin]]
name = "vbsp-to-gltf"
path = "src/cli.rs"

[[bin]]
name = "vbsp-server"
path = "src/server/server.rs"
required-features = ["server"]

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
vbsp = "0.6.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
vtf = "0.3.0"
vmt-parser = "0.2.0"
image = "0.25.2"
tf-asset-loader = { version = "0.1.5", features = ["zip"] }
vmdl = "0.2"
clap = { version = "4.4.18", features = ["derive"] }
gltf-json = { version = "1.4.1", features = ["KHR_texture_transform"] }
gltf = "1.4.1"
cgmath = "0.18.0"
bytemuck = { version = "1.17.1", features = ["derive"] }
texpresso = { version = "2.0.1", features = ["rayon"] }
serde = "1.0.209"
ahash = "0.8.11"

url = { version = "2.5.2", optional = true, features = ["serde"] }
toml = { version = "0.8.19", optional = true }
axum = { version = "0.7.5", optional = true, features = ["macros"] }
tokio = { version = "1.39.3", features = ["full"], optional = true }
reqwest = { version = "0.12.7", optional = true, default-features = false, features = ["rustls-tls-webpki-roots"] }
async-tempfile = { version = "0.6.0", optional = true }
tower-http = { version = "0.5.2", optional = true, features = ["cors"] }
http = { version = "1.1.0", optional = true }

[features]
server = ["url", "toml", "axum", "tokio", "reqwest", "async-tempfile", "tower-http", "http"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true